introduced api v2; added infrastructure code for cross api communication;other improvements

--- a/src/medcenter/appsettings.json
+++ b/src/medcenter/appsettings.json
@@ -7,9 +7,10 @@
         "Microsoft": "Information"
       }
     },
+    "Env": "dev",
     "Auth0": {
       "Domain": "dev-bdadfu3r.eu.auth0.com",
-      "Audience": "http://med-center/api",
+      "AppId": "http://med-center/api",
       "Policies" : [
         "read:medrecords",
         "modify:medrecords",
@@ -17,7 +18,8 @@
         "arrange:exams",
         "cancel:exams",
         "fetch:medrecord",
-        "admin:status"
+        "admin:status",
+        "read:trials"
       ]
     }
   }
