--- a/src/medcenter/Properties/launchSettings.json
+++ b/src/medcenter/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29077/medcenter",
+      "applicationUrl": "http://localhost:29077/",
       "sslPort": 44361
     }
   },
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "medcenter",
-      "applicationUrl": "https://localhost:5001/medcenter",
+      "applicationUrl": "https://localhost:5001/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
