--- a/src/medcenter/medcenter.csproj
+++ b/src/medcenter/medcenter.csproj
@@ -7,11 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="mediatr" Version="8.1.0" />
+    <PackageReference Include="mediatr.extensions.microsoft.dependencyinjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="newtonsoft.json" Version="12.0.3" />
     <PackageReference Include="nlog" Version="4.7.3" />
     <PackageReference Include="nlog.config" Version="4.7.3" />
+    <PackageReference Include="restsharp" Version="106.11.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\contracts\contracts.csproj" />
   </ItemGroup>
 
 
